--- a/ProyectoADBJ/app/src/main/res/layout/activity_dashboard.xml
+++ b/ProyectoADBJ/app/src/main/res/layout/activity_dashboard.xml
@@ -17,8 +17,9 @@
 
         <ImageView
             android:id="@+id/imgUser"
-            android:layout_width="70dp"
+            android:layout_width="100dp"
             android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
             android:layout_weight="1"
             android:padding="5dp"
             app:srcCompat="@drawable/arnold" />
@@ -35,6 +36,7 @@
                 android:id="@+id/lblUser"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
                 android:layout_weight="1"
                 android:text="PowerLifter69"
                 android:textColor="@android:color/white"
@@ -44,8 +46,10 @@
                 android:id="@+id/lblLocation"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
                 android:layout_weight="1"
                 android:text="Chile"
+
                 android:textColor="@android:color/white"
                 android:textSize="16dp" />
         </LinearLayout>
