--- a/ProyectoADBJ/app/src/main/res/layout/activity_menu_info.xml
+++ b/ProyectoADBJ/app/src/main/res/layout/activity_menu_info.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#3F7CB4"
+    android:background="@color/white"
     android:orientation="vertical"
     tools:context=".menuInfo">
 
@@ -15,6 +15,7 @@
         android:layout_marginTop="20dp"
         android:layout_marginBottom="20dp"
         android:text="Información"
+        android:textColor="@android:color/black"
         android:textAlignment="center"
         android:textSize="30sp" />
 
@@ -45,6 +46,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="Horario"
+            android:textColor="@android:color/black"
             android:textSize="20sp" />
 
         <LinearLayout
@@ -58,6 +60,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:textColor="@android:color/black"
                 android:text="Lunes a Viernes 6:00-23:00"
                 android:textSize="20sp" />
 
@@ -66,6 +69,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:textColor="@android:color/black"
                 android:text="Sabado 9:00-19:00"
                 android:textSize="20sp" />
 
@@ -74,6 +78,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:textColor="@android:color/black"
                 android:text="Domingo 9:00-14:00"
                 android:textSize="20sp" />
 
@@ -95,6 +100,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="Contacto"
+            android:textColor="@android:color/black"
             android:textSize="20sp" />
 
         <TextView
@@ -102,6 +108,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:textColor="@android:color/black"
             android:text="Fono +56912345678"
             android:textSize="20sp" />
     </LinearLayout>
@@ -119,6 +126,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="Direccion"
+            android:textColor="@android:color/black"
             android:textSize="20sp" />
 
         <TextView
@@ -126,6 +134,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:textColor="@android:color/black"
             android:text="Carretera del Cobre 666"
             android:textSize="20sp" />
 
