--- a/ProyectoADBJ/app/src/main/res/layout/fragment_tab_user.xml
+++ b/ProyectoADBJ/app/src/main/res/layout/fragment_tab_user.xml
@@ -14,6 +14,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@drawable/dashboard_background_blue"
             android:orientation="vertical"
             android:padding="20dp">
 
@@ -21,37 +22,47 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:text="Arnold Schwarzenegger"
-                android:textSize="30dp"/>
+                android:textColor="@android:color/black"
+                android:textSize="35sp"
+                android:shadowColor="@color/text_shadow"
+                android:shadowDx="0"
+                android:shadowDy="0"
+                android:shadowRadius="8"/>
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:text="Chile"
-                android:textSize="20dp"
-                />
+                android:textColor="@android:color/black"
+                android:textSize="25sp"
+                android:shadowColor="@color/text_shadow"
+                android:shadowDx="0"
+                android:shadowDy="0"
+                android:shadowRadius="8"/>
 
             <ImageView
                 android:id="@+id/imageView2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:src="@drawable/arnold"
-                android:padding="20dp"/>
+                android:padding="20dp"
+                android:src="@drawable/arnold" />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:text="Plan Mr Olimpia Plus"
-                android:textSize="20dp"
                 android:paddingTop="50dp"
                 android:paddingBottom="10dp"
-                />
+                android:text="Plan Mr Olimpia Plus"
+                android:textColor="@android:color/black"
+                android:textSize="25sp" />
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:text="Desde 10/10/2018 a 10/10/2020"
-                android:textSize="20dp"
                 android:paddingBottom="15dp"
-                />
+                android:text="Desde 10/10/2018 a 10/10/2020"
+                android:textColor="@android:color/black"
+                android:textSize="25sp" />
 
 
         </LinearLayout>
