--- a/ProyectoADBJ/app/src/main/res/values/colors.xml
+++ b/ProyectoADBJ/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="text_shadow">#000000</color>
     <color name="text_shadow_white">#FFFFFF</color>
     <color name="white">#FFFFFF</color>
+    <color name="white_80">#CCFFFFFF</color>
 </resources>
