Agregada base de datos, agregado check de usuario.

--- a/ProyectoADBJ/app/src/main/res/layout/activity_main.xml
+++ b/ProyectoADBJ/app/src/main/res/layout/activity_main.xml
@@ -96,7 +96,7 @@
                     android:textSize="15sp" />
 
                 <TextView
-                    android:id="@+id/txSignup"
+                    android:id="@+id/txRegistrarse"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
