Cambios miscelaneos Master

--- a/ProyectoADBJ/app/src/main/res/layout/activity_dashboard.xml
+++ b/ProyectoADBJ/app/src/main/res/layout/activity_dashboard.xml
@@ -103,7 +103,7 @@
     <androidx.viewpager.widget.ViewPager
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/vpDashboard">
+        android:id="@+id/dashViewPager">
 
 
     </androidx.viewpager.widget.ViewPager>
