--- a/ProyectoADBJ/app/src/main/res/layout/fragment_tab_user.xml
+++ b/ProyectoADBJ/app/src/main/res/layout/fragment_tab_user.xml
@@ -19,6 +19,7 @@
             android:padding="20dp">
 
             <TextView
+                android:id="@+id/lblUserName"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:text="Arnold Schwarzenegger"
