--- a/ProyectoADBJ/app/src/main/res/layout/activity_main.xml
+++ b/ProyectoADBJ/app/src/main/res/layout/activity_main.xml
@@ -41,7 +41,7 @@
                 android:background="@drawable/edit_round"
                 android:ems="10"
                 android:gravity="center"
-                android:hint="EMAIL"
+                android:hint="USUARIO"
                 android:inputType="textPersonName"
                 android:selectAllOnFocus="false" />
 
