--- a/ProyectoADBJ/app/src/main/res/layout/activity_registro.xml
+++ b/ProyectoADBJ/app/src/main/res/layout/activity_registro.xml
@@ -102,7 +102,7 @@
                 android:layout_width="90dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:text="Email"
+                android:text="Usuario"
                 android:gravity="center_vertical"
                 android:textColor="#25364F"
                 android:textSize="20sp"
