Ultimo avance intentando transferir datos de activity a fragment usando bundles. Sin éxito.

--- a/ProyectoADBJ/app/src/main/res/layout/activity_dashboard.xml
+++ b/ProyectoADBJ/app/src/main/res/layout/activity_dashboard.xml
@@ -57,7 +57,7 @@
 
     <com.google.android.material.tabs.TabLayout
         android:layout_width="match_parent"
-        android:id="@+id/tlDashboard"
+        android:id="@+id/dashTabLayout"
         android:layout_height="wrap_content"
         android:background="@color/gymFondo"
         app:tabTextColor="@android:color/white"
