--- a/ProyectoADBJ/app/src/main/res/layout/activity_registro.xml
+++ b/ProyectoADBJ/app/src/main/res/layout/activity_registro.xml
@@ -40,7 +40,6 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/textView2"
                 android:layout_width="90dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
@@ -51,7 +50,7 @@
                 android:textStyle="bold" />
 
             <EditText
-                android:id="@+id/txNombres"
+                android:id="@+id/txNombreRegistro"
                 android:layout_width="wrap_content"
                 android:layout_height="50dp"
                 android:layout_weight="1"
@@ -69,7 +68,6 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/lbApellido"
                 android:layout_width="90dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
@@ -80,7 +78,7 @@
                 android:textStyle="bold" />
 
             <EditText
-                android:id="@+id/txApellidos"
+                android:id="@+id/txApellidosRegistro"
                 android:layout_width="wrap_content"
                 android:layout_height="50dp"
                 android:layout_weight="1"
@@ -98,7 +96,6 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/textView15"
                 android:layout_width="90dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
@@ -109,7 +106,7 @@
                 android:textStyle="bold" />
 
             <EditText
-                android:id="@+id/txMail"
+                android:id="@+id/txUserNameRegistro"
                 android:layout_width="wrap_content"
                 android:layout_height="50dp"
                 android:layout_weight="1"
@@ -137,7 +134,7 @@
                 android:textStyle="bold" />
 
             <EditText
-                android:id="@+id/txPassword"
+                android:id="@+id/txPasswordRegistro"
                 android:layout_width="wrap_content"
                 android:layout_height="50dp"
                 android:layout_weight="1"
@@ -217,14 +214,6 @@
                     android:textColor="#25364F"
                     android:textStyle="bold" />
 
-                <RadioButton
-                    android:id="@+id/rbNoBinario"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="No Binario"
-                    android:textColor="#25364F"
-                    android:textStyle="bold" />
-
 
             </RadioGroup>
         </LinearLayout>
@@ -256,7 +245,7 @@
                 android:layout_weight="1"
                 android:background="@drawable/edit_round"
                 android:backgroundTint="#1dd1a1"
-                android:text="Formas de pago"
+                android:text="SIGUIENTE"
                 android:textColor="#25364F"
                 android:textSize="18dp" />
         </LinearLayout>
