--- a/ProyectoADBJ/app/src/main/res/layout/fragment_tab_stats.xml
+++ b/ProyectoADBJ/app/src/main/res/layout/fragment_tab_stats.xml
@@ -25,9 +25,9 @@
                 android:orientation="vertical">
 
                 <LinearLayout
-                    android:layout_marginTop="20dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp"
                     android:orientation="horizontal">
 
                     <TextView
@@ -35,81 +35,225 @@
                         android:layout_height="wrap_content"
                         android:text="Seleccione una Fecha"
                         android:textColor="#25364F"
-                        android:textSize="25sp">
-                    </TextView>
+                        android:textSize="25sp"></TextView>
 
                 </LinearLayout>
 
                 <LinearLayout
-                    android:layout_marginTop="20dp"
                     android:layout_width="350dp"
                     android:layout_height="310dp"
                     android:layout_marginHorizontal="10dp"
+                    android:layout_marginTop="20dp"
                     android:orientation="horizontal">
 
 
                     <CalendarView
                         android:id="@+id/calendarView"
                         android:layout_width="wrap_content"
-                        android:background="@drawable/calendario"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1" />
+                        android:layout_weight="1"
+                        android:background="@drawable/calendario" />
                 </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_margin="20dp"
-                    android:orientation="horizontal">
+                    android:orientation="vertical">
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Ingreso:"
-                        android:textColor="#25364F"
-                        android:textSize="25sp">
-                    </TextView>
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal">
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="20dp"
-                        android:text="08:30 hrs"
-                        android:textColor="#25364F"
-                        android:textSize="25sp">
-                    </TextView>
+                            <ScrollView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content">
 
-                    </LinearLayout>
+                            <TableLayout
+                                android:layout_width="340dp"
+                                android:layout_height="200dp"
+                                android:layout_marginTop="50dp"
+                                android:layout_marginLeft="18dp"
+                                android:background="@drawable/table_border"
+                                android:stretchColumns="1">
 
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="20dp"
-                    android:orientation="horizontal">
+                                <TableRow
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content">
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Salida:"
-                        android:textColor="#25364F"
-                        android:textSize="25sp">
-                    </TextView>
+                                    <TextView
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:background="@drawable/table_cell_border"
+                                        android:gravity="center_horizontal"
+                                        android:padding="15dp"
+                                        android:text="Hora"
+                                        android:textSize="20sp"
+                                        android:textStyle="bold" />
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="35dp"
-                        android:text="10:25 hrs"
-                        android:textColor="#25364F"
-                        android:textSize="25sp">
-                    </TextView>
+                                    <TextView
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:background="@drawable/table_cell_border"
+                                        android:gravity="center_horizontal"
+                                        android:padding="15dp"
+                                        android:text="Actividad"
+                                        android:textSize="20sp"
+                                        android:textStyle="bold" />
+
+                                    <TextView
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:background="@drawable/table_cell_border"
+                                        android:gravity="center_horizontal"
+                                        android:padding="15dp"
+                                        android:text="Trainer"
+                                        android:textSize="20sp"
+                                        android:textStyle="bold" />
+                                </TableRow>
+
+                                <TableRow
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content">
+
+                                    <TextView
+                                        android:layout_width="120dp"
+                                        android:layout_height="wrap_content"
+                                        android:background="@drawable/table_cell_border"
+                                        android:gravity="center_horizontal"
+                                        android:padding="10dp"
+                                        android:text="8:00"
+                                        android:textSize="20sp" />
+
+                                    <TextView
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:background="@drawable/table_cell_border"
+                                        android:gravity="center_horizontal"
+                                        android:padding="10dp"
+                                        android:text="Crossfit"
+                                        android:textSize="20sp" />
+
+                                    <TextView
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:background="@drawable/table_cell_border"
+                                        android:gravity="center_horizontal"
+                                        android:padding="10dp"
+                                        android:text="Crossfit"
+                                        android:textSize="20sp" />
+                                </TableRow>
+
+                                <TableRow
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content">
+
+                                    <TextView
+                                        android:layout_width="120dp"
+                                        android:layout_height="wrap_content"
+                                        android:background="@drawable/table_cell_border"
+                                        android:gravity="center_horizontal"
+                                        android:padding="10dp"
+                                        android:text="9:30"
+                                        android:textSize="20sp" />
+
+                                    <TextView
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:background="@drawable/table_cell_border"
+                                        android:gravity="center_horizontal"
+                                        android:padding="10dp"
+                                        android:text="Yoga"
+                                        android:textSize="20sp" />
+
+                                    <TextView
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:background="@drawable/table_cell_border"
+                                        android:gravity="center_horizontal"
+                                        android:padding="10dp"
+                                        android:text="Crossfit"
+                                        android:textSize="20sp" />
+                                </TableRow>
+
+                                <TableRow
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content">
+
+                                    <TextView
+                                        android:layout_width="120dp"
+                                        android:layout_height="wrap_content"
+                                        android:background="@drawable/table_cell_border"
+                                        android:gravity="center_horizontal"
+                                        android:padding="10dp"
+                                        android:text="9:30"
+                                        android:textSize="20sp" />
+
+                                    <TextView
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:background="@drawable/table_cell_border"
+                                        android:gravity="center_horizontal"
+                                        android:padding="10dp"
+                                        android:text="Yoga"
+                                        android:textSize="20sp" />
+
+                                    <TextView
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:background="@drawable/table_cell_border"
+                                        android:gravity="center_horizontal"
+                                        android:padding="10dp"
+                                        android:text="Crossfit"
+                                        android:textSize="20sp" />
+                                </TableRow>
+
+                                <TableRow
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content">
+
+                                    <TextView
+                                        android:layout_width="120dp"
+                                        android:layout_height="wrap_content"
+                                        android:background="@drawable/table_cell_border"
+                                        android:gravity="center_horizontal"
+                                        android:padding="10dp"
+                                        android:text="9:30"
+                                        android:textSize="20sp" />
+
+                                    <TextView
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:background="@drawable/table_cell_border"
+                                        android:gravity="center_horizontal"
+                                        android:padding="10dp"
+                                        android:text="Yoga"
+                                        android:textSize="20sp" />
+
+                                    <TextView
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:background="@drawable/table_cell_border"
+                                        android:gravity="center_horizontal"
+                                        android:padding="10dp"
+                                        android:text="Crossfit"
+                                        android:textSize="20sp" />
+                                </TableRow>
+
+                            </TableLayout>
+                            </ScrollView>
+                        </LinearLayout>
+
+
+
 
 
                 </LinearLayout>
 
-                </LinearLayout>
 
             </LinearLayout>
+
+        </LinearLayout>
 
 
     </ScrollView>
