--- a/ProyectoADBJ/app/src/main/res/layout/fragment_tab_trainers.xml
+++ b/ProyectoADBJ/app/src/main/res/layout/fragment_tab_trainers.xml
@@ -18,12 +18,228 @@
             android:orientation="vertical"
             android:padding="20dp">
 
-
-
-            <TextView
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:text="@string/tabTrainers" />
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_horizontal"
+                    android:text="Chapulin Colorado"
+                    android:textSize="26dp"/>
+
+
+
+                <ImageView
+                    android:layout_width="250dp"
+                    android:layout_height="250dp"
+                    android:layout_gravity="center_horizontal"
+                    android:src="@drawable/trainer1"/>
+
+                <TextView
+                    android:layout_width="250dp"
+                    android:layout_height="wrap_content"
+                    android:textSize="24dp"
+                    android:layout_marginLeft="60dp"
+                    android:text="Horario:"/>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="125dp"
+                        android:layout_height="wrap_content"
+                        android:textSize="24dp"
+                        android:layout_marginLeft="60dp"
+                        android:layout_gravity="center_horizontal"
+                        android:text="LUN-MIE"/>
+
+                    <TextView
+                        android:layout_width="125dp"
+                        android:layout_height="wrap_content"
+                        android:textSize="24dp"
+                        android:layout_gravity="center_horizontal"
+                        android:text="19/21"/>
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="24dp"
+                        android:layout_marginLeft="60dp"
+                        android:layout_gravity="center_horizontal"
+                        android:text="Yoga"/>
+
+                    <TextView
+                        android:layout_width="125dp"
+                        android:layout_height="wrap_content"
+                        android:textSize="24dp"
+                        android:layout_marginLeft="20dp"
+                        android:layout_gravity="center_horizontal"
+                        android:text="Cardio"/>
+                </LinearLayout>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_marginTop="60dp">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_horizontal"
+                    android:text="Johnny English"
+                    android:textSize="26dp"/>
+
+
+
+                <ImageView
+                    android:layout_width="250dp"
+                    android:layout_height="170dp"
+                    android:layout_gravity="center_horizontal"
+                    android:src="@drawable/trainer2"/>
+
+                <TextView
+                    android:layout_width="250dp"
+                    android:layout_height="wrap_content"
+                    android:textSize="24dp"
+                    android:layout_marginLeft="60dp"
+                    android:text="Horario:"/>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="125dp"
+                        android:layout_height="wrap_content"
+                        android:textSize="24dp"
+                        android:layout_marginLeft="60dp"
+                        android:layout_gravity="center_horizontal"
+                        android:text="LUN-MIE"/>
+
+                    <TextView
+                        android:layout_width="125dp"
+                        android:layout_height="wrap_content"
+                        android:textSize="24dp"
+                        android:layout_gravity="center_horizontal"
+                        android:text="19/21"/>
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="24dp"
+                        android:layout_marginLeft="60dp"
+                        android:layout_gravity="center_horizontal"
+                        android:text="Cardio"/>
+
+                    <TextView
+                        android:layout_width="125dp"
+                        android:layout_height="wrap_content"
+                        android:textSize="24dp"
+                        android:layout_marginLeft="20dp"
+                        android:layout_gravity="center_horizontal"
+                        android:text="Crossfit"/>
+                </LinearLayout>
+            </LinearLayout>
+
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_marginTop="60dp">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_horizontal"
+                    android:text="Nacho Libre"
+                    android:textSize="26dp"/>
+
+
+
+                <ImageView
+                    android:layout_width="250dp"
+                    android:layout_height="180dp"
+                    android:layout_gravity="center_horizontal"
+                    android:src="@drawable/trainer3"/>
+
+                <TextView
+                    android:layout_width="250dp"
+                    android:layout_height="wrap_content"
+                    android:textSize="24dp"
+                    android:layout_marginLeft="60dp"
+                    android:text="Horario:"/>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="125dp"
+                        android:layout_height="wrap_content"
+                        android:textSize="24dp"
+                        android:layout_marginLeft="60dp"
+                        android:layout_gravity="center_horizontal"
+                        android:text="LUN-MIE"/>
+
+                    <TextView
+                        android:layout_width="125dp"
+                        android:layout_height="wrap_content"
+                        android:textSize="24dp"
+                        android:layout_gravity="center_horizontal"
+                        android:text="19/21"/>
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="24dp"
+                        android:layout_marginLeft="60dp"
+                        android:layout_gravity="center_horizontal"
+                        android:text="Boxeo"/>
+
+                    <TextView
+                        android:layout_width="125dp"
+                        android:layout_height="wrap_content"
+                        android:textSize="24dp"
+                        android:layout_marginLeft="20dp"
+                        android:layout_gravity="center_horizontal"
+                        android:text="Lucha Libre"/>
+                </LinearLayout>
+            </LinearLayout>
+
+
+
+
 
         </LinearLayout>
     </ScrollView>
