--- a/ProyectoADBJ/app/src/main/res/layout/fragment_tab_stats.xml
+++ b/ProyectoADBJ/app/src/main/res/layout/fragment_tab_stats.xml
@@ -48,7 +48,7 @@
 
 
                     <CalendarView
-                        android:id="@+id/calendarView"
+                        android:id="@+id/calendarioEventos"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
