Inicializado fragmentCalendario, resta codigo para llenar el listview de todos los eventos a los que el usuario se ha suscrito

--- a/ProyectoADBJ/app/src/main/res/layout/fragment_tab_calendario.xml
+++ b/ProyectoADBJ/app/src/main/res/layout/fragment_tab_calendario.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragmentClases">
+    tools:context=".fragmentCalendario">
 
     <!-- TODO: Update blank fragment layout -->
 
@@ -37,7 +37,7 @@
             android:backgroundTint="@color/gymFondo">
 
             <ListView
-                android:id="@+id/lvClases"
+                android:id="@+id/lvCalendario"
 
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
