Corregido bug de registro

--- a/ProyectoADBJ/app/src/main/res/layout/activity_main.xml
+++ b/ProyectoADBJ/app/src/main/res/layout/activity_main.xml
@@ -77,14 +77,15 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="252dp"
+            android:layout_height="100dp"
             android:gravity="bottom|left"
             android:orientation="vertical">
 
             <LinearLayout
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:gravity="bottom|left"
+                android:layout_marginTop="10dp"
                 android:orientation="horizontal">
 
                 <TextView
@@ -96,13 +97,14 @@
                     android:textSize="15sp" />
 
                 <TextView
+
                     android:id="@+id/txRegistrarse"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
                     android:layout_weight="1"
                     android:text="Registrate"
-                    android:textColor="#F64658"
+                    android:textColor="#000"
                     android:textSize="16sp"
                     android:textStyle="bold" />
             </LinearLayout>
