--- a/ProyectoADBJ/app/src/main/res/layout/activity_registro.xml
+++ b/ProyectoADBJ/app/src/main/res/layout/activity_registro.xml
@@ -24,8 +24,8 @@
             android:id="@+id/textView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"
+            android:layout_marginTop="1dp"
+            android:layout_marginBottom="2dp"
             android:text="Únete a nosotros!"
             android:textAlignment="center"
             android:textColor="#25364F"
@@ -36,7 +36,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
+            android:layout_margin="5dp"
             android:orientation="horizontal">
 
             <TextView
@@ -64,7 +64,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
+            android:layout_margin="5dp"
             android:orientation="horizontal">
 
             <TextView
@@ -92,7 +92,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
+            android:layout_margin="5dp"
             android:orientation="horizontal">
 
             <TextView
@@ -119,7 +119,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
+            android:layout_margin="5dp"
             android:orientation="horizontal">
 
             <TextView
@@ -148,7 +148,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
+            android:layout_margin="5dp"
             android:orientation="horizontal">
 
             <TextView
@@ -173,12 +173,40 @@
                 android:inputType="textPassword"
                 android:textAlignment="center" />
 
+
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_margin="5dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_weight="0.15"
+                android:layout_height="match_parent"
+                android:textSize="20sp"
+                android:text="Tu Plan"
+                android:gravity="center_vertical"
+                android:textColor="#25364F"
+
+                android:textStyle="bold" />
+
+            <Spinner
+                android:id="@+id/spPagoPlanes"
+                android:layout_weight="0.85"
+                android:layout_width="wrap_content"
+                android:layout_height="40dp"
+                android:textSize="18sp"
+                android:scrollbarSize="8dp">
+            </Spinner>
+
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
+            android:layout_margin="5dp"
             android:orientation="horizontal">
 
             <TextView
@@ -213,8 +241,6 @@
                     android:text="Femenino"
                     android:textColor="#25364F"
                     android:textStyle="bold" />
-
-
             </RadioGroup>
         </LinearLayout>
 
